--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -302,8 +302,7 @@
                                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ZQk-f4-zrz">
                                                 <rect key="frame" x="0.0" y="110" width="94" height="32"/>
                                                 <connections>
-                                                    <action selector="Stepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="tj7-Gj-yA7"/>
-                                                    <action selector="strawberryStepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="ela-Aa-rIi"/>
+                                                    <action selector="stepperValueChanged:" destination="Yu1-lM-nqp" eventType="valueChanged" id="1yZ-tr-YVO"/>
                                                 </connections>
                                             </stepper>
                                         </subviews>
@@ -327,7 +326,7 @@
                                             <stepper opaque="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="O5s-2N-3iP">
                                                 <rect key="frame" x="0.0" y="110" width="94" height="32"/>
                                                 <connections>
-                                                    <action selector="Stepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="NZX-bB-Qt1"/>
+                                                    <action selector="stepperValueChanged:" destination="Yu1-lM-nqp" eventType="valueChanged" id="GrJ-4u-hFa"/>
                                                 </connections>
                                             </stepper>
                                         </subviews>
@@ -351,7 +350,7 @@
                                             <stepper opaque="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Rcr-xr-eqz">
                                                 <rect key="frame" x="0.0" y="110" width="94" height="32"/>
                                                 <connections>
-                                                    <action selector="Stepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="UCt-uv-jXU"/>
+                                                    <action selector="stepperValueChanged:" destination="Yu1-lM-nqp" eventType="valueChanged" id="NAk-bj-vo7"/>
                                                 </connections>
                                             </stepper>
                                         </subviews>
@@ -375,7 +374,7 @@
                                             <stepper opaque="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="klA-59-Nu4">
                                                 <rect key="frame" x="0.0" y="110" width="94" height="32"/>
                                                 <connections>
-                                                    <action selector="Stepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="qDc-np-r7S"/>
+                                                    <action selector="stepperValueChanged:" destination="Yu1-lM-nqp" eventType="valueChanged" id="ZQf-nG-3KO"/>
                                                 </connections>
                                             </stepper>
                                         </subviews>
@@ -399,22 +398,32 @@
                                             <stepper opaque="NO" tag="4" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="xbn-6P-grO">
                                                 <rect key="frame" x="0.0" y="110" width="94" height="32"/>
                                                 <connections>
-                                                    <action selector="Stepper:" destination="Yu1-lM-nqp" eventType="valueChanged" id="dgE-lR-ZaI"/>
+                                                    <action selector="stepperValueChanged:" destination="Yu1-lM-nqp" eventType="valueChanged" id="exk-qT-yuV"/>
                                                 </connections>
                                             </stepper>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="VDD-FP-eyH">
-                                <rect key="frame" x="714" y="25" width="110" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="닫기"/>
-                                <connections>
-                                    <action selector="touchUpInsideDismissFruitStore:" destination="Yu1-lM-nqp" eventType="touchUpInside" id="qou-4N-0v7"/>
-                                </connections>
-                            </button>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bpg-Z1-zpe">
+                                <rect key="frame" x="0.0" y="0.0" width="844" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Title" id="6p5-nU-fjr">
+                                        <barButtonItem key="rightBarButtonItem" style="plain" id="ce8-a2-oWi">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="VDD-FP-eyH">
+                                                <rect key="frame" x="667" y="4.6666666666666679" width="110" height="35"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="닫기"/>
+                                                <connections>
+                                                    <action selector="touchUpInsideDismissFruitStore:" destination="Yu1-lM-nqp" eventType="touchUpInside" id="qou-4N-0v7"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gcO-Xb-kNs"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -430,13 +439,13 @@
                         <outlet property="bananaCount" destination="gKu-86-RhI" id="U1Q-p4-7lL"/>
                         <outlet property="bananaStepper" destination="O5s-2N-3iP" id="SDJ-af-AOv"/>
                         <outlet property="kiwiCount" destination="ZDv-1m-HBY" id="fXx-WL-ZMa"/>
-                        <outlet property="kiwiStepper" destination="klA-59-Nu4" id="cO6-49-Bi6"/>
+                        <outlet property="kiwiStepper" destination="klA-59-Nu4" id="NfB-qv-G4r"/>
                         <outlet property="mangoCount" destination="YJI-ER-LJR" id="iwF-aC-hhJ"/>
                         <outlet property="mangoStepper" destination="xbn-6P-grO" id="2Rs-fK-XKO"/>
                         <outlet property="pineappleCount" destination="MpT-VW-hCb" id="aQj-7f-eiJ"/>
-                        <outlet property="pineappleStepper" destination="Rcr-xr-eqz" id="T48-gg-peb"/>
+                        <outlet property="pineappleStepper" destination="Rcr-xr-eqz" id="xjQ-Ky-3q0"/>
                         <outlet property="strawberryCount" destination="0yV-kn-zaT" id="YAE-WY-DgE"/>
-                        <outlet property="strawberryStepper" destination="ZQk-f4-zrz" id="Rc1-Dv-E0f"/>
+                        <outlet property="strawberryStepper" destination="ZQk-f4-zrz" id="kZN-7H-zNu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ieh-6D-g1l" sceneMemberID="firstResponder"/>
