--- a/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/View/Base.lproj/Main.storyboard
@@ -410,16 +410,10 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="재고 추가" id="6p5-nU-fjr">
-                                        <barButtonItem key="rightBarButtonItem" style="plain" id="ce8-a2-oWi">
-                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="VDD-FP-eyH">
-                                                <rect key="frame" x="667" y="4.6666666666666679" width="110" height="35"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title="닫기"/>
-                                                <connections>
-                                                    <action selector="touchUpInsideDismissFruitStore:" destination="Yu1-lM-nqp" eventType="touchUpInside" id="qou-4N-0v7"/>
-                                                </connections>
-                                            </button>
+                                        <barButtonItem key="rightBarButtonItem" title="닫기" id="uIx-RE-tOX">
+                                            <connections>
+                                                <action selector="touchUpInsideDismissFruitStore:" destination="Yu1-lM-nqp" id="PLI-k6-bGf"/>
+                                            </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
