--- a/JuiceMaker/JuiceMaker/Source/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/Source/View/Base.lproj/Main.storyboard
@@ -222,7 +222,12 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="bananaLabel" destination="gvk-pA-Lw5" id="PLu-Sa-b2I"/>
+                        <outlet property="kiwiLabel" destination="FZq-de-TJG" id="nNh-gB-vDS"/>
+                        <outlet property="mangoLabel" destination="3Ce-SU-JeH" id="Eaz-qx-611"/>
                         <outlet property="modifiedFruitStockButton" destination="C3q-Te-cNT" id="xhc-9e-lHO"/>
+                        <outlet property="pineappleLabel" destination="ccQ-Dk-PuY" id="YRN-wJ-9eG"/>
+                        <outlet property="straberryLabel" destination="Qas-vP-td6" id="fnT-Lw-D9N"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -387,7 +392,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray5Color">
-            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
