--- a/JuiceMaker/JuiceMaker/Source/View/Base.lproj/Main.storyboard
+++ b/JuiceMaker/JuiceMaker/Source/View/Base.lproj/Main.storyboard
@@ -126,6 +126,9 @@
                                                 <state key="normal" title="딸바쥬스 주문">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="orderStrawbananaJuiceButtonClicked:" destination="BYZ-38-t0r" eventType="touchDown" id="qCO-Yl-Y0o"/>
+                                                </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9E2-H9-FXr">
                                                 <rect key="frame" x="293.66666666666669" y="0.0" width="130.66666666666669" height="60"/>
@@ -227,7 +230,8 @@
                         <outlet property="mangoLabel" destination="3Ce-SU-JeH" id="Eaz-qx-611"/>
                         <outlet property="modifiedFruitStockButton" destination="C3q-Te-cNT" id="xhc-9e-lHO"/>
                         <outlet property="pineappleLabel" destination="ccQ-Dk-PuY" id="YRN-wJ-9eG"/>
-                        <outlet property="straberryLabel" destination="Qas-vP-td6" id="fnT-Lw-D9N"/>
+                        <outlet property="strawbananaJuiceButton" destination="hrc-2F-fzl" id="nTd-dy-XZG"/>
+                        <outlet property="strawberryLabel" destination="Qas-vP-td6" id="CAj-7E-FoV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
